fix jwt auth
